# cheatshield

./: .gitignore  README.md
.github/workflows/: cd-admin.yml  cd-face-detect.yml  cd-mobile.yml  cd.yml
cheatshield-admin/: .dockerignore  .env  .env.example  .env.local  .env.production  .gitignore  Dockerfile  bun.lockb  composer.json  flake.nix  nginx.conf  start.sh
cheatshield-admin/app/Models/: Answer.php  Attempt.php  Option.php  Permission.php  PersonalAccessToken.php  Profile.php  Question.php  Quiz.php  QuizSession.php  QuizSessionResult.php  Role.php  Student.php  StudentEmbedding.php  User.php  UserAnswerInSession.php  UserInQuizSession.php
cheatshield-admin/app/Providers/: AppServiceProvider.php
cheatshield-admin/app/Services/: FaceRecognitionService.php
cheatshield-admin/bootstrap/: app.php
cheatshield-admin/database/factories/: AnswerFactory.php  AttemptFactory.php  OptionFactory.php  ProfileFactory.php  QuestionFactory.php  QuizFactory.php
cheatshield-admin/database/migrations/: 0001_01_01_000000_create_users_table.php  0001_01_01_000002_create_jobs_table.php  2024_10_15_074250_create_profiles_table.php  2024_10_15_074251_create_quizzes_table.php  2024_10_15_074252_create_questions_table.php  (+9 more)
cheatshield-admin/routes/: api.php
cheatshield-face-detect/: .env  .gitignore  Dockerfile  face_detector.py  face_embedding.py  face_orientation_sorter.py  face_sorter.py  flake.nix  frame_extractor.py  main.py  pyproject.toml  timer.py  util.py
cheatshield-face-detect/.direnv/: flake-profile-6-link
cheatshield-face-detect/workspace/: .gitignore
cheatshield-mobile/: flake.nix
cheatshield-mobile/.direnv/: flake-profile-7-link
cheatshield-mobile/cheatshield/: README.md  flutter_launcher_icons.yaml  pubspec.yaml
documents/: pbl-report.typ  srs.typ
infrastructure/cheatshield-admin/: docker-compose.yml
infrastructure/cheatshield-face-detect/: docker-compose.yml
infrastructure/postgresql/: docker-compose.yml
infrastructure/traefik/: docker-compose.yml
(+86 files in other folders)
